@@ -278,6 +278,7 @@ All (GUI):
 - Made wxSizer::Fit() set the client size of the target window
 - Add support for wxDatePickerCtrl in wxGenericValidator (Herry Ayen Yang)
 - Added wxWindow::HasFocus().
+- Added wxGLCanvas::IsDisplaySupported()
 
 wxGTK:
 
